# ftbf

./: .gitignore  CITATION.cff  LICENSE  README.md  build_x64.bat  build_x86.bat
FTBF/: cache_utils.cpp  cache_utils.h  common.h  config_utils.cpp  config_utils.h  context_utils.cpp  context_utils.h  ffi.cpp  ffi.h  ftbf.cpp  image_utils.cpp  image_utils.h  makefile.rules  taint_wrappers.cpp  taint_wrappers.h  types.h  utils.cpp
FTBF/ftbf_rust/: Cargo.toml
FTBF/ftbf_rust/.cargo/: config.toml
FTBF/ftbf_rust/src/: allocator.rs  analyzer.rs  apis.json  checker.rs  ffi.rs  lib.rs  logger.rs  policy_structures.rs  registers.rs  taint_events.rs  utils.rs
rules/Bypass UAC/: ftbf_policy.json  ftbf_rule.json
rules/Code Injection/: ftbf_policy.json  ftbf_rule.json
rules/Command and Control (C2) Communication/: ftbf_policy.json  ftbf_rule.json
rules/Debugger Detection API/: ftbf_policy.json  ftbf_rule.json
rules/Debugger Detection Code/: ftbf_policy.json  ftbf_rule.json
rules/Deobfuscation/: ftbf_policy.json  ftbf_rule.json
rules/Disable Winevt/: ftbf_policy.json  ftbf_rule.json
rules/Privilege escalation/: ftbf_policy.json  ftbf_rule.json
rules/RansomwareEncryption/: ftbf_policy.json  ftbf_rule.json
